src/app/component/confirm_dialog/snapshots/jedit__app__component__confirm_dialog__text_confirm_dialog__test__render_edit_test-2.snap
---
source: src/app/component/confirm_dialog/text_confirm_dialog.rs
expression: render_to_string(&dialog)
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             ┌Input───────────────────────────────────────────────┐             "
"             │> default value12█                                  │             "
"             └────────────────────────────────────────────────────┘             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
